# rbac-system

./: .gitignore  Anchor.toml  LICENSE  README.md  SUBMISSION.md  auto_downgrade.py  check_error.txt  cli.ts  generate_idl.js  package.json  tsconfig.json
app/: cli.js  package.json
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: PermissionBadge.tsx  WalletProvider.tsx
frontend/src/idl/: rbac_system.json
frontend/src/utils/: anchor.ts
programs/rbac_system/: Cargo.toml
programs/rbac_system/src/: lib.rs
tests/: rbac_system.ts
