[package]
name = "rbac-system"
version = "0.1.0"
description = "On-Chain Role-Based Access Control System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rbac_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"